tests/error/vararg_invalid_acces.gw
#! [contains] InvalidVariadicAccess
fun void test(...) {
  vararg.start;
  <<<vararg $ int >>>;
  vararg.end;
}
Vec3(1.3) => test;
